<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBookActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/editBook_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tenSach"
            android:textSize="19sp"
            android:textColor="@color/colortextBlack"/>
        <EditText
            android:id="@+id/editBook_tenSach"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tenTG"
            android:textSize="19sp"
            android:textColor="@color/colortextBlack"/>
        <EditText
            android:id="@+id/editBook_tenTG"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tenNXB"
            android:textSize="19sp"
            android:textColor="@color/colortextBlack"/>
        <EditText
            android:id="@+id/editBook_NXB"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/theLoai"
            android:textSize="19sp"
            android:textColor="@color/colortextBlack"/>
        <Spinner
            android:id="@+id/editBook_theLoai"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/soLuong"
            android:textSize="19sp"
            android:textColor="@color/colortextBlack"/>
        <EditText
            android:id="@+id/editBook_soLuong"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:id="@+id/editBook_btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Update"/>
</LinearLayout>