<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_black_24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/colortextBlack"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_login_usermane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textAlignment="center"
        android:textColor="@color/colortextBlack"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorLink="@color/colorPrimaryDark"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        />
</LinearLayout>