<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPhieuMuonActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <android.support.design.widget.TabLayout
            android:id="@+id/AddPhieuMuon_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TabLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/AddPhieuMuon_viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v4.view.ViewPager>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/tenNguoiMuon"
                android:textColor="@color/colortextBlack"/>
            <EditText
                android:id="@+id/AddPhieuMuon_Ten"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="2"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/tenSach"-->
                <!--android:textColor="@color/colortextBlack"/>-->
            <!--<AutoCompleteTextView-->
                <!--android:id="@+id/AddPhieuMuon_tenSach"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="4"-->
                <!--android:layout_height="wrap_content"-->
                <!--tools:ignore="LabelFor" />-->
            <!--<Button-->
                <!--android:id="@+id/AddPhieuMuon_btnAdd"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/them"/>-->
        <!--</LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/soLuong"
                android:textColor="@color/colortextBlack"/>
            <EditText
                android:focusable="false"
                android:id="@+id/AddPhieuMuon_soluong"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/ngay_muon"
                android:textColor="@color/colortextBlack"/>
            <EditText
                android:id="@+id/AddPhieuMuon_date"
                android:inputType="date"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/AddPhieuMuon_pickDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ba_cham" />
        </LinearLayout>
        <Button
            android:id="@+id/AddPhieuMuon_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_saveMember"/>
        <Button
            android:id="@+id/AddPhieuMuon_btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_back"/>
    </LinearLayout>
</LinearLayout>